ES-36/Update Search User api with pagination and sorting (#33)